# static_bundler

./: Cargo.toml  README.md
src/: lib.rs
